<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="wit.edu.newsie.NewTopicActivity">

    <LinearLayout
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:ems="10"
            android:id="@+id/etTopicTitle"
            android:hint="@string/topic_title" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/btnNext" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/likeSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:id="@+id/fbSearchLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <AutoCompleteTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/actvLikes"
                android:ems="10"
                android:hint="@string/search_friends"
                android:popupBackground="#000000"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/btnAddLike" />
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_fb"
            android:id="@+id/cbNoFb"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:checked="false" />

        <Button
            android:id="@+id/btnInstaConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insta_login"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:id="@+id/instSearchLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">
            <AutoCompleteTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/actvInstFollows"
                android:ems="10"
                android:hint="@string/search_subscriptions"
                android:popupBackground="#000000"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/btnAddInstFollow" />
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_insta"
            android:id="@+id/cbNoInstagram"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:checked="false" />

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/btnTwitterLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:id="@+id/twitSearchLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">
            <AutoCompleteTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/actvTwitterFollows"
                android:ems="10"
                android:hint="@string/search_twit_follows"
                android:popupBackground="#000000"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/btnAddTwitterFollow" />
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_twitter"
            android:id="@+id/cbNoTwitter"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:checked="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/btnSave"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>
