<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context="wit.edu.newsie.AccountsActivity">

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_fb"
        android:id="@+id/cbFb"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:checked="false" />

    <Button
        android:id="@+id/btnInstagram"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/insta_login"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_insta"
        android:id="@+id/cbInstagram"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:checked="false" />

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/btnTwitter"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_twitter"
        android:id="@+id/cbTwitter"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Done"
        android:id="@+id/btnAccountsDone"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

</LinearLayout>
